Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19276

ep-engine: benign data race on ExecutorThread::taskStart

    XMLWordPrintable

Details

    • Untriaged
    • Unknown

    Description

      As reported by TSan, race when generating task stats.

      This appears benign, as it is only used for generating the %s:runtime stat for a worker.

      WARNING: ThreadSanitizer: data race (pid=41666)
        Read of size 8 at 0x7d4400008378 by main thread (mutexes: write M21616):
          #0 ExecutorThread::getTaskStart() const /home/daver/repos/couchbase/server/ep-engine/src/executorthread.h:102 (ep.so+0x0000001cab9e)
          #1 addWorkerStats(char const*, ExecutorThread*, void const*, void (*)(char const*, unsigned short, char const*, unsigned int, void const*)) /home/daver/repos/couchbase/server/ep-engine/src/executorpool.cc:689 (ep.so+0x0000001b6d6e)
          #2 ExecutorPool::doWorkerStat(EventuallyPersistentEngine*, void const*, void (*)(char const*, unsigned short, char const*, unsigned int, void const*)) /home/daver/repos/couchbase/server/ep-engine/src/executorpool.cc:706 (ep.so+0x0000001b6734)
          #3 EventuallyPersistentEngine::doDispatcherStats(void const*, void (*)(char const*, unsigned short, char const*, unsigned int, void const*)) /home/daver/repos/couchbase/server/ep-engine/src/ep_engine.cc:4139 (ep.so+0x00000015223e)
          #4 EventuallyPersistentEngine::getStats(void const*, char const*, int, void (*)(char const*, unsigned short, char const*, unsigned int, void const*)) /home/daver/repos/couchbase/server/ep-engine/src/ep_engine.cc:4375 (ep.so+0x000000155336)
       
        Previous write of size 8 at 0x7d4400008378 by thread T6:
          #0 ExecutorThread::run() /home/daver/repos/couchbase/server/ep-engine/src/executorthread.cc:99 (ep.so+0x0000001e889c)
          #1 launch_executor_thread(void*) /home/daver/repos/couchbase/server/ep-engine/src/executorthread.cc:34 (ep.so+0x0000001e807a)
          #2 platform_thread_wrap /home/daver/repos/couchbase/server/platform/src/cb_pthreads.c:19 (libplatform.so.0.1.0+0x0000000035dc)
      

      Note: already fixed in watson: http://review.couchbase.org/57593

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              drigby Dave Rigby (Inactive)
              drigby Dave Rigby (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty