src/executorthread.h
@@ -27,6 +27,8 @@
 #include <utility>
 #include <vector>
 
+#include <relaxed_atomic.h>
+
 #include "atomic.h"
 #include "common.h"
 #include "mutex.h"
@@ -132,7 +134,7 @@ private:
     AtomicValue<hrtime_t> now;  // record of current time
     hrtime_t waketime; // set to the earliest
 
-    hrtime_t taskStart;
+    Couchbase::RelaxedAtomic<hrtime_t> taskStart;
 
     Mutex currentTaskMutex; // Protects currentTask
     ExTask currentTask;
